--- a/index.html
+++ b/index.html
@@ -57,15 +57,22 @@
         <!-- Nagłówek z przyciskiem wyciszenia -->
         <header class="flex justify-between items-center mb-6 pt-4">
             <h1 class="text-2xl font-bold text-white">Quizy & Treningi</h1>
-            <button id="sound-toggle" class="p-2 rounded-lg bg-gray-800 hover:bg-gray-700 transition" title="Wycisz dźwięki">
-                <svg id="sound-icon-on" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.536 8.464a5 5 0 010 7.072m2.828-9.9a9 9 0 010 12.728M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
-                </svg>
-                <svg id="sound-icon-off" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" clip-rule="evenodd" />
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2" />
-                </svg>
-            </button>
+            <div class="flex gap-2">
+                <button id="home-button" class="p-2 rounded-lg bg-gray-800 hover:bg-gray-700 transition" title="Powrót do strony głównej">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                    </svg>
+                </button>
+                <button id="sound-toggle" class="p-2 rounded-lg bg-gray-800 hover:bg-gray-700 transition" title="Wycisz dźwięki">
+                    <svg id="sound-icon-on" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.536 8.464a5 5 0 010 7.072m2.828-9.9a9 9 0 010 12.728M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" />
+                    </svg>
+                    <svg id="sound-icon-off" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707C10.923 3.663 12 4.109 12 5v14c0 .891-1.077 1.337-1.707.707L5.586 15z" clip-rule="evenodd" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2" />
+                    </svg>
+                </button>
+            </div>
         </header>
 
         <!-- EKRAN GŁÓWNY -->
@@ -214,6 +221,22 @@
                     </button>
                     <button id="continue-no" class="flex-1 bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-lg transition">
                         Nie, zacznij od nowa
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- DIALOG POWROTU DO STRONY GŁÓWNEJ -->
+        <div id="exit-dialog" class="hidden fixed inset-0 bg-black/70 flex items-center justify-center p-4 z-50">
+            <div class="bg-gray-800 p-6 rounded-2xl shadow-2xl max-w-md w-full">
+                <h2 class="text-2xl font-bold text-white mb-4">Wyjść do menu?</h2>
+                <p class="text-gray-300 mb-6">Twój postęp zostanie zapisany. Będziesz mógł wrócić do tej sesji później.</p>
+                <div class="flex gap-3">
+                    <button id="exit-confirm" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition">
+                        Tak, wyjdź
+                    </button>
+                    <button id="exit-cancel" class="flex-1 bg-gray-700 hover:bg-gray-600 text-white font-medium py-3 px-6 rounded-lg transition">
+                        Anuluj
                     </button>
                 </div>
             </div>
