--- a/index.html
+++ b/index.html
@@ -166,10 +166,14 @@
                 <div class="mb-6">
                     <p class="text-5xl font-bold text-white mb-2" id="quiz-final-score">0%</p>
                     <p class="text-xl text-gray-300" id="quiz-final-details">0 / 0 poprawnych odpowiedzi</p>
+                    <p class="text-sm text-gray-400 mt-2" id="quiz-mistakes-info"></p>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-3">
                     <button id="quiz-retry" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-6 rounded-lg transition">
                         🔄 Spróbuj ponownie
+                    </button>
+                    <button id="quiz-retry-mistakes" class="hidden flex-1 bg-orange-600 hover:bg-orange-700 text-white font-bold py-4 px-6 rounded-lg transition">
+                        📝 Przećwicz błędy
                     </button>
                     <button id="quiz-home" class="flex-1 bg-gray-700 hover:bg-gray-600 text-white font-bold py-4 px-6 rounded-lg transition">
                         🏠 Powrót do menu
