1 stage of implemetation of v2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
+    <!-- Supabase Client -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -272,7 +275,13 @@
     </div>
 
     <!-- Skrypty JS -->
-    <script type="module" src="js/app.js"></script>
+    <script src="js/audio.js"></script>
+    <script src="js/supabase-client.js"></script>
+    <script src="js/auth-service.js"></script>
+    <script src="js/data-service.js"></script>
+    <script src="js/quiz-engine.js"></script>
+    <script src="js/workout-engine.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
