--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
 
     <!-- Skrypty JS -->
     <script src="js/audio.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/supabase-client.js"></script>
     <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
