--- a/index.html
+++ b/index.html
@@ -805,6 +805,10 @@
     <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
     
+    <!-- State Management (v2.1 - reactive state) -->
+    <script src="js/state-manager.js"></script>
+    <script src="js/ui-state.js"></script>
+    
     <!-- Managers (v2.0 refactored) -->
     <script src="js/ui-manager.js"></script>
     <script src="js/session-manager.js"></script>
