--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <div class="bg-gray-800 p-6 rounded-2xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-2xl font-bold text-white">
-                        <span id="import-title">Dodaj Quiz</span>
+                        <span id="import-title">Dodaj Zawartość</span>
                     </h2>
                     <button id="import-close" class="text-gray-400 hover:text-white text-2xl">×</button>
                 </div>
@@ -707,7 +707,7 @@
                 <!-- Wybór typu treści -->
                 <div class="mb-4">
                     <label class="block text-sm font-medium text-gray-300 mb-2">Co chcesz wygenerować?</label>
-                    <div class="grid grid-cols-2 gap-3">
+                    <div class="grid grid-cols-3 gap-3">
                         <button id="ai-type-quiz" class="ai-type-btn px-4 py-3 rounded-lg border-2 transition bg-blue-600 border-blue-600 text-white" data-type="quiz">
                             <div class="text-2xl mb-1">📝</div>
                             <div class="font-semibold">Quiz</div>
@@ -715,6 +715,10 @@
                         <button id="ai-type-workout" class="ai-type-btn px-4 py-3 rounded-lg border-2 transition border-gray-600 text-gray-300 hover:border-gray-500" data-type="workout">
                             <div class="text-2xl mb-1">💪</div>
                             <div class="font-semibold">Trening</div>
+                        </button>
+                        <button id="ai-type-listening" class="ai-type-btn px-4 py-3 rounded-lg border-2 transition border-gray-600 text-gray-300 hover:border-gray-500" data-type="listening">
+                            <div class="text-2xl mb-1">🎧</div>
+                            <div class="font-semibold text-sm">Słuchanie</div>
                         </button>
                     </div>
                 </div>
@@ -731,6 +735,57 @@
                         💡 <strong>Wskazówka:</strong> Opisz rodzaj treningu i poziom, np:
                         <br>"Trening FBW dla początkujących, 30 minut, bez sprzętu"
                     </p>
+                </div>
+                
+                <div id="ai-hint-listening" class="hidden bg-purple-900/30 border border-purple-600/50 rounded-lg p-3 mb-4">
+                    <p class="text-purple-200 text-sm">
+                        💡 <strong>Wskazówka:</strong> Opisz czego chcesz się nauczyć, np:
+                        <br>"Podstawowe czasowniki w hiszpańskim", "Kolory po angielsku", "Liczby 1-100 po niemiecku"
+                    </p>
+                </div>
+                
+                <!-- Wybór języków (tylko dla Listening) -->
+                <div id="ai-language-selection" class="hidden mb-4 space-y-3">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-300 mb-2">Język 1 (bazowy)</label>
+                        <select id="ai-lang1" class="w-full bg-gray-700 border border-gray-600 text-white px-4 py-2 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+                            <option value="">-- Wybierz język --</option>
+                            <option value="pl-PL">🇵🇱 Polski</option>
+                            <option value="en-US">🇺🇸 Angielski (US)</option>
+                            <option value="en-GB">🇬🇧 Angielski (UK)</option>
+                            <option value="es-ES">🇪🇸 Hiszpański (Hiszpania)</option>
+                            <option value="es-MX">🇲🇽 Hiszpański (Meksyk)</option>
+                            <option value="de-DE">🇩🇪 Niemiecki</option>
+                            <option value="fr-FR">🇫🇷 Francuski</option>
+                            <option value="it-IT">🇮🇹 Włoski</option>
+                            <option value="pt-BR">🇧🇷 Portugalski (Brazylia)</option>
+                            <option value="pt-PT">🇵🇹 Portugalski (Portugalia)</option>
+                            <option value="ru-RU">🇷🇺 Rosyjski</option>
+                            <option value="ja-JP">🇯🇵 Japoński</option>
+                            <option value="zh-CN">🇨🇳 Chiński (Mandaryński)</option>
+                            <option value="ko-KR">🇰🇷 Koreański</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-300 mb-2">Język 2 (docelowy)</label>
+                        <select id="ai-lang2" class="w-full bg-gray-700 border border-gray-600 text-white px-4 py-2 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+                            <option value="">-- Wybierz język --</option>
+                            <option value="pl-PL">🇵🇱 Polski</option>
+                            <option value="en-US">🇺🇸 Angielski (US)</option>
+                            <option value="en-GB">🇬🇧 Angielski (UK)</option>
+                            <option value="es-ES">🇪🇸 Hiszpański (Hiszpania)</option>
+                            <option value="es-MX">🇲🇽 Hiszpański (Meksyk)</option>
+                            <option value="de-DE">🇩🇪 Niemiecki</option>
+                            <option value="fr-FR">🇫🇷 Francuski</option>
+                            <option value="it-IT">🇮🇹 Włoski</option>
+                            <option value="pt-BR">🇧🇷 Portugalski (Brazylia)</option>
+                            <option value="pt-PT">🇵🇹 Portugalski (Portugalia)</option>
+                            <option value="ru-RU">🇷🇺 Rosyjski</option>
+                            <option value="ja-JP">🇯🇵 Japoński</option>
+                            <option value="zh-CN">🇨🇳 Chiński (Mandaryński)</option>
+                            <option value="ko-KR">🇰🇷 Koreański</option>
+                        </select>
+                    </div>
                 </div>
 
                 <!-- Prompt -->
