Added wakelock for listening

--- a/index.html
+++ b/index.html
@@ -1390,6 +1390,7 @@
     <script src="js/data-service.js"></script>
     
     <!-- State Management (v2.1 - reactive state) -->
+    <script src="js/wake-lock.js"></script>
     <script src="js/state-manager.js"></script>
     <script src="js/ui-state.js"></script>
     
