--- a/index.html
+++ b/index.html
@@ -546,6 +546,37 @@
                     <p id="player-description" class="text-gray-400 text-sm"></p>
                 </div>
                 
+                <!-- Wskazówka o wygaszaniu ekranu -->
+                <div id="screen-timeout-tip" class="mb-4 bg-orange-900/30 border border-orange-600/50 rounded-lg p-4">
+                    <div class="flex items-start gap-3">
+                        <div class="flex-shrink-0 text-2xl">💡</div>
+                        <div class="flex-1">
+                            <p class="text-orange-200 text-sm font-medium mb-2">Wskazówka: Zapobieganie wygaszaniu ekranu</p>
+                            <p class="text-orange-300/80 text-xs mb-3">
+                                Aby ekran nie gasł podczas nauki, zmień ustawienia telefonu:
+                            </p>
+                            <div class="space-y-2 text-xs">
+                                <div class="bg-orange-900/20 rounded p-2">
+                                    <p class="text-orange-200 font-semibold mb-1">📱 Android:</p>
+                                    <p class="text-orange-300/80">Ustawienia → Wyświetlacz → Wygaszanie ekranu → <strong>10 minut</strong> (lub więcej)</p>
+                                </div>
+                                <div class="bg-orange-900/20 rounded p-2">
+                                    <p class="text-orange-200 font-semibold mb-1">🍎 iOS:</p>
+                                    <p class="text-orange-300/80">Ustawienia → Ekran i jasność → Autoblokada → <strong>Nigdy</strong></p>
+                                </div>
+                            </div>
+                            <button id="dismiss-screen-tip" class="mt-3 text-xs text-orange-400 hover:text-orange-300 underline">
+                                Rozumiem, nie pokazuj więcej
+                            </button>
+                        </div>
+                        <button id="close-screen-tip" class="flex-shrink-0 text-orange-400 hover:text-orange-300">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                
                 <!-- Pasek postępu -->
                 <div class="mb-6">
                     <div class="bg-gray-700 h-2 rounded-full overflow-hidden mb-2">
