--- a/index.html
+++ b/index.html
@@ -479,14 +479,7 @@
                             <div class="space-y-2 text-xs">
                                 <div class="bg-orange-900/20 rounded p-2">
                                     <p class="text-orange-200 font-semibold mb-1">📱 Android:</p>
-                                    <p class="text-orange-300/80 mb-2">Ustawienia → Wyświetlacz → Wygaszanie ekranu → <strong>10 minut</strong></p>
-                                    <button id="open-android-settings-workout" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-1.5 px-2 rounded transition flex items-center justify-center gap-2 text-xs">
-                                        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                                        </svg>
-                                        <span>Otwórz ustawienia</span>
-                                    </button>
+                                    <p class="text-orange-300/80">Ustawienia → Wyświetlacz → Wygaszanie ekranu → <strong>10 minut</strong></p>
                                 </div>
                                 <div class="bg-orange-900/20 rounded p-2">
                                     <p class="text-orange-200 font-semibold mb-1">🍎 iOS:</p>
@@ -597,14 +590,7 @@
                             <div class="space-y-2 text-xs">
                                 <div class="bg-orange-900/20 rounded p-2">
                                     <p class="text-orange-200 font-semibold mb-1">📱 Android:</p>
-                                    <p class="text-orange-300/80 mb-2">Ustawienia → Wyświetlacz → Wygaszanie ekranu → <strong>10 minut</strong> (lub więcej)</p>
-                                    <button id="open-android-settings-listening" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-2 px-3 rounded transition flex items-center justify-center gap-2">
-                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                                        </svg>
-                                        <span>Otwórz ustawienia</span>
-                                    </button>
+                                    <p class="text-orange-300/80">Ustawienia → Wyświetlacz → Wygaszanie ekranu → <strong>10 minut</strong> (lub więcej)</p>
                                 </div>
                                 <div class="bg-orange-900/20 rounded p-2">
                                     <p class="text-orange-200 font-semibold mb-1">🍎 iOS:</p>
