Refactor JavaScript modules to use ES6 imports/exports, update index.html to load scripts as modules, and enhance package.json with linting and formatting scripts for improved code quality.

--- a/index.html
+++ b/index.html
@@ -1467,17 +1467,18 @@
     </nav>
 
     <!-- Skrypty JS -->
-    <script src="js/audio.js"></script>
+    <script type="module" src="js/audio.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/feature-flags.js"></script>
-    <script src="js/supabase-client.js"></script>
-    <script src="js/auth-service.js"></script>
-    <script src="js/data-service.js"></script>
+    <script type="module" src="js/feature-flags.js"></script>
+    <script type="module" src="js/supabase-client.js"></script>
+    <script type="module" src="js/auth-service.js"></script>
+    <script type="module" src="js/data-service.js"></script>
     
     <!-- State Management (v2.1 - reactive state) -->
-    <script src="js/wake-lock.js"></script>
-    <script src="js/state-manager.js"></script>
-    <script src="js/ui-state.js"></script>
+    <script type="module" src="js/wake-lock.js"></script>
+    <script type="module" src="js/state-manager.js"></script>
+    <script type="module" src="js/ui-state.js"></script>
+    <script type="module" src="js/modules-shim.js"></script>
     
     <!-- Managers (v2.0 refactored) -->
     <script src="js/ui-manager.js"></script>
