--- a/index.html
+++ b/index.html
@@ -1614,7 +1614,7 @@
     
     <!-- State Management (v2.1 - reactive state) -->
     <script type="module" src="js/wake-lock.js"></script>
-    <script type="module" src="js/state-manager.js"></script>
+    <script type="module" src="js/state/store.js"></script>
     <script type="module" src="js/ui-state.js"></script>
     <script type="module" src="js/modules-shim.js"></script>
     
