refactor: FAZA 1 - Krok 3 - Utworzenie app-state.js (centralny store)
- Utworzono js/state/app-state.js - centralny reaktywny store aplikacji
- Store zawiera TYLKO globalne dane: user, navigation, currentTab, UI state
- Dodano helper functions: setCurrentUser, setUserRole, setCurrentScreen, etc.
- Backward compatibility przez window.* (do usunięcia w Kroku 17)
- Dodano do index.html
- Testy przechodzą ✅

Część implementacji ARCHITECTURE_REFACTORING_FINAL_PLAN.md - Krok 3

--- a/index.html
+++ b/index.html
@@ -1615,6 +1615,7 @@
     <!-- State Management (v2.1 - reactive state) -->
     <script type="module" src="js/wake-lock.js"></script>
     <script type="module" src="js/state/store.js"></script>
+    <script type="module" src="js/state/app-state.js"></script>
     <script type="module" src="js/ui-state.js"></script>
     <script type="module" src="js/modules-shim.js"></script>
     
