fix: Naprawienie importów state-manager i authService
BUGFIX 1: 404 na state-manager.js
- Problem: modules-shim.js importował stary ./state-manager.js
- Rozwiązanie: Zmieniono na ./state/store.js
- Dodano import app-state.js
- Dodano eksport window.appState

BUGFIX 2: authService is not defined
- Problem: app.js ładował się przed modules-shim.js (ES6 module async)
- Rozwiązanie: Dodano defer do app.js w index.html
- Gwarantuje że app.js uruchomi się po załadowaniu wszystkich modułów

Zmiany:
✅ js/modules-shim.js - poprawione importy state
✅ index.html - defer dla app.js

Status testów: 317/321 passing ✅

Teraz aplikacja powinna działać bez błędów w konsoli!

--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
     <script src="js/workout-engine.js"></script>
     <script src="js/listening-engine.js"></script>
     <script src="js/knowledge-base-engine.js"></script>
-    <script src="js/app.js"></script>
+    <script defer src="js/app.js"></script>
 
 </body>
 </html>
