feat(engines): Refactor QuizEngine do ES6 class - FAZA 3.2
- Utworzono js/engines/quiz-engine.js (850+ linii)
- Konwersja IIFE → ES6 Class dziedzicząca po BaseEngine
- Implementacja wszystkich lifecycle methods
- Obsługa wszystkich typów pytań
- Backward compatibility facade
- Lokalny stan quizu (enkapsulowany)

Build: ✅ 24 moduły (158ms)
Tests: 397/411 passing (96.6%)

FAZA 3.2 ZAKOŃCZONA

--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
     <script src="js/ai-prompts.js"></script>
     <script src="js/content-manager.js"></script>
     
-    <script src="js/quiz-engine.js"></script>
+    <!-- FAZA 3.2: quiz-engine migrated to ES6 class (loaded via main.js) -->
     <script src="js/workout-engine.js"></script>
     <script src="js/listening-engine.js"></script>
     <script src="js/knowledge-base-engine.js"></script>
