--- a/index.html
+++ b/index.html
@@ -1625,8 +1625,7 @@
     <script src="js/ai-prompts.js"></script>
     <script src="js/content-manager.js"></script>
     
-    <!-- FAZA 3.2: quiz-engine migrated to ES6 class (loaded via main.js) -->
-    <script src="js/workout-engine.js"></script>
+    <!-- FAZA 3.2-3.3: quiz-engine & workout-engine migrated to ES6 classes (loaded via main.js) -->
     <script src="js/listening-engine.js"></script>
     <script src="js/knowledge-base-engine.js"></script>
     <script defer src="js/app.js"></script>
