feat(services): Add new services for validation, import, export, and AI handling
- Introduced validation-service, import-service, export-service, and ai-service to enhance modularity and functionality.
- Each service is exported to the window for compatibility with IIFE modules.
- Added console logs to confirm initialization of each service.

This update improves the structure of the application by separating concerns into dedicated service modules.

--- a/index.html
+++ b/index.html
@@ -1622,6 +1622,13 @@
     <script type="module" src="js/state/store.js"></script>
     <script type="module" src="js/state/app-state.js"></script>
     
+    <!-- Services (FAZA 5.3: Extracted from content-manager) -->
+    <script type="module" src="js/services/validation-service.js"></script>
+    <script type="module" src="js/services/import-service.js"></script>
+    <script type="module" src="js/services/export-service.js"></script>
+    <script type="module" src="js/services/ai-service.js"></script>
+    <script type="module" src="js/services/error-handler.js"></script>
+    
     <!-- Managers (v2.0 refactored) -->
     <script type="module" src="js/ui/ui-manager.js"></script>
     <script type="module" src="js/ui/session-manager.js"></script>
