chore(build): Update build process and versioning
- Implemented a new Vercel build script to automate cache busting and version updates.
- Updated `.vercel-build-id` to reflect the latest build timestamp and ID.
- Changed the version comment in `index.html` and added build information to `quiz-engine.js` and `workout-engine.js`.
- Enhanced cache control headers in `index.html` for improved resource management.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <!-- Version: 2025-11-01-android-settings -->
+    <!-- Version: 1762868366 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>eTrener</title>
     <meta name="description" content="Interaktywna platforma do nauki i treningów - quizy, treningi fitness i nauka języków">
     
